# Breda-assignment

./: .clang-format  .gitignore  CMakeLists.txt  NightShade.sln  README.md  README.txt  add_sublime_context.reg  build_dist.bat  clean.bat  code_review  enemy.cpp  enemy.h  game.cpp  game.h  level.cpp  level.h  plan.md  player.cpp  player.h  tmpl8_2022.sln  tmpl8_2026.slnx  tmpl_2022.vcxproj  tmpl_2022.vcxproj.filters
assets/levels/: level1.tmx  level3.tmx
include/: enemy.h  entity.h  game.h  level.h  player.h
levels/: level1.tmx  level1.txt  level3.tmx  map.tmx  test.tmx
src/: enemy.cpp  entity.cpp  game.cpp  level.cpp  player.cpp  tinyxml2.cpp
tmpl8/: Level.h  player.cpp  player.h  surface.cpp  surface.h  template.cpp  template.h  tmpl_2022.vcxproj  tmpl_2022.vcxproj.filters  tmpl_2026.vcxproj  tmpl_2026.vcxproj.filters
tmpl8/levels/: level1.tmx  level2.tmx  level3.tmx  map.tmx
